--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=langchain4j
+
+langchain4j.google.ai.gemini.api-key=YOUR_GOOGLE_STUDIO_AI_API_KEY
+langchain4j.google.ai.gemini.model-name=gemini-2.5-flash
+
+#PROMPTS
+# ai.prompt.assistant-instructions=prompts/assistant-instructions.txt
